--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 OPENAI_API_KEY=
 
+# Authentication (leave empty to disable login)
+APP_PASSWORD=
+
 LANGSMITH_TRACING=true
 LANGCHAIN_TRACING_V2=true
 LANGSMITH_ENDPOINT=https://api.smith.langchain.com
