--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Application logs
+logs/
+*.log
+
+# Scraped data (optional - uncomment if you don't want to track this)
+# all_articles.json
